# Assignments-ALL

./: README.md
COL216    (Architecture)/: Angel_print_int.s
COL216    (Architecture)/ASSIGN1/: Assign1_with comments.s
COL331(OS)/HW1/: Assign1.txt  infinite.c  sigint.c  signal_handler.c
COL331(OS)/hw2/: hw.txt
COL362(dbms)/: example
COL362(dbms)/ASS2/: 2018CS50408.sql  assgin2.sql  create_table2.sql  query2.sql
COL726/: a1.py
COL732/Ass2/: processor  processor.rs  prog.lmc
COL732/Project/: Cargo.toml  README.md  README_old.md  commands
COL732/Project/demo/: analog.py  demo.c  demo.py  demo.rs  demo2.py  demo3.py  donut  donut.c  run.py  run.sh
COL732/Project/src/: main.rs
COL732/Project/src/api/src/: lib.rs
COL732/Project/src/devices/src/legacy/: serial.rs
COL732/Project/src/vm-memory/: Cargo.toml
COL732/Project/src/vm-memory/src/: lib.rs
COL732/Project/src/vm-vcpu/: Cargo.toml
COL732/Project/src/vm-vcpu/src/: vm.rs
COL732/Project/src/vm-vcpu/src/vcpu/: mod.rs
COL732/Project/src/vmm/: Cargo.toml
COL732/Project/src/vmm/src/: boot.rs  dedup.rs  lib.rs  memory_snapshot.rs
COL732/Project/src/vmm/src/config/: builder.rs  mod.rs
COL732/Project/src/vmm/tests/: integration_tests.rs
COL732/SLIDES/kvm_basic (3)/kvm_basic/: Cargo.toml  README.md  mmap.txt
COL732/SLIDES/kvm_basic (3)/kvm_basic/src/: a.out  kvmtest.c
COL732/starter_code_ass1/: hello.rs  map  (+8 more)
MyApp 1.0/: app-release.apk  license.txt  readme.txt
PREMIUM VIP 1.0/: license.txt  readme.txt
hohlabs/: Makefile
placement/: placement2_Graphs_Dp.ipynb  placements.ipynb
(+178 files in other folders)
