[package]
name = "kvm_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmm-sys-util = "0.9.0"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
libc = "0.2.126"